링크명함에 사진올려본것 수정본 다시 올림

--- a/contract_list.html
+++ b/contract_list.html
@@ -14,10 +14,11 @@
     <section class="top_menu">
       <nav id="top_manu">
         <ul>
-          <li><a class="menuLink" href="name_list.html">고객명단관리</a></li>
-          <li><a class="menuLink" href="contract_list.html">계약관리</a></li>
-          <li><a class="menuLink" href="#">보험금관리</a></li>
-          <li><a class="menuLink" href="#">문서관리</a></li>
+          <li><a class="menuLink" href="beginner.html">신인 필수 과정</a></li>
+          <li><a class="menuLink" href="name_list.html">명단</a></li>
+          <li><a class="menuLink" href="contract_list.html">계약</a></li>
+          <li><a class="menuLink" href="document_manage.html">보험금</a></li>
+          <li><a class="menuLink" href="document_manage.html">문서</a></li>
           <li><a class="menuLink" href="#">IMS</a></li>
           <li><a class="menuLink" href="#">링크명함</a></li>
           
