--- a/index.html
+++ b/index.html
@@ -14,12 +14,13 @@
     <section class="top_menu">
       <nav id="top_manu">
         <ul>
-          <li><a class="menuLink" href="name_list.html">고객명단관리</a></li>
-          <li><a class="menuLink" href="contract_list.html">계약목록관리</a></li>
-          <li><a class="menuLink" href="#">보험금관리</a></li>
-          <li><a class="menuLink" href="#">문서관리</a></li>
+          <li><a class="menuLink" href="beginner.html">신인 필수 과정</a></li>
+          <li><a class="menuLink" href="name_list.html">명단</a></li>
+          <li><a class="menuLink" href="contract_list.html">계약</a></li>
+          <li><a class="menuLink" href="document_manage.html">보험금</a></li>
+          <li><a class="menuLink" href="document_manage.html">문서</a></li>
           <li><a class="menuLink" href="#">IMS</a></li>
-          <li><a class="menuLink" href="#">링크명함</a></li>
+          <li><a class="menuLink" href="linknc_cjk3489.html">링크명함</a></li>
           
         </ul>
       </nav>
@@ -31,12 +32,13 @@
         보무관리시스템으로 슬기로운 보험영업을 합니다<br><br><br>
         관련된 모든 정보를 제공합니다
         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quidem odio ducimus, ipsam expedita nobis quibusdam, quae doloremque maiores, maxime accusamus dolor consequuntur? Earum, aliquam maiores totam voluptatibus animi architecto labore sed, facilis, molestias enim aut neque natus error sapiente tenetur mollitia magnam? Laboriosam recusandae ullam distinctio dolorum odio provident voluptates nulla a. Molestias corrupti vero placeat, recusandae tempora culpa sequi hic atque ipsum ullam soluta repellat cum.
+
       </main>
       
       <nav>
         <ul>
-          <li><a class="menuLink" href="#">이름관리</a></li>
-          <li><a class="menuLink" href="#">등급관리</a></li>
+          <li><a class="menuLink" href="#">고객명단관리</a></li>
+          <li><a class="menuLink" href="#">고객등</a></li>
           <li><a class="menuLink" href="#">가족정보</a></li>
           <li><a class="menuLink" href="#">기타정보</a></li>
           <li><a class="menuLink" href="#">관리자</a></li>
