--- a/linknc_cjk3489.html
+++ b/linknc_cjk3489.html
@@ -12,7 +12,7 @@
   <div>
     <p>최선을 다하겠습니다</p>
     <img src="img/최재경프로필 소야.jpg" style="max-width: 100%; height: auto;"/><br>
-    <img src="img/최재경 명함.png" style="max-width: 100%; height: auto;"/><br>
+    <img src="img/최재경 명함.PNG" style="max-width: 100%; height: auto;"/><br>
   </div>
   <p>
     강점:
