명함페이지 레이아웃 수정

--- a/linknc_cjk3489.html
+++ b/linknc_cjk3489.html
@@ -3,16 +3,32 @@
 <head>
     <title>IMS대표 최재경입니다</title>
     <meta charset="utf-8" />
-    <!-- ?<link rel="stylesheet" href="style.css"> -->
+    ?<link rel="stylesheet" href="name_card.css">
 </head>
 
 <body>
-  <h1>IMS대표 최재경입니다</h1>
-  <h2> 보험영업이 즐거워진다</h2>
+
+  <header class="welcome-header">
+    <h1 class="welcome-header__title">IMS대표 최재경입니다</h1>
+    <p class="welcome-header__text">
+      보험영업이 즐거워진다
+    </p>
+    <p class="welcome-header__text">
+      보험영업이 즐거워진다
+    </p>
+    <p class= "welcome-header__text"> 최선을 다하겠습니다</p>
+
+  </header>
+
+
   <div>
-    <p>최선을 다하겠습니다</p>
-    <img src="img/최재경프로필 소야.jpg" style="max-width: 100%; height: auto;"/><br>
-    <img src="img/최재경 명함.PNG" style="max-width: 100%; height: auto;"/><br>
+   
+    <img src="img/최재경프로필 소야.jpg" style="display:block; margin:0 auto; width:600px;"/>
+    <br>
+
+    <img src="img/최재경 명함.PNG" style="display:block; margin:0 auto; width:600px;"/>
+
+    <br>
   </div>
   <p>
     강점:
